--- a/README
+++ b/README
@@ -7,4 +7,4 @@ This is the EXPERIMENTAL release PearPC 0.6pre.
 Please read the documentation online at
 
 	http://pearpc.sf.net
-If you need help contact pearpcmailinglist@gmail.com.
+If you need help contact pearpclist@outlook.com.
